--- a/code/css/one-page-wonder.css
+++ b/code/css/one-page-wonder.css
@@ -73,39 +73,41 @@ header.masthead .masthead-content .masthead-subheading {
   font-size: 2rem;
 }
 
-header.masthead .bg-circle {
-  z-index: 0;
-  position: absolute;
-  border-radius: 100%;
-  background: linear-gradient(0deg, #0024AB 0%, #52B6CA 100%);
-}
+@media (min-width: 1100px ) {
+    header.masthead .bg-circle {
+      z-index: 0;
+      position: absolute;
+      border-radius: 100%;
+      background: linear-gradient(0deg, #0024AB 0%, #52B6CA 100%);
+    }
 
-header.masthead .bg-circle-1 {
-  height: 90rem;
-  width: 90rem;
-  bottom: -55rem;
-  left: -55rem;
-}
+    header.masthead .bg-circle-1 {
+      height: 90rem;
+      width: 90rem;
+      bottom: -55rem;
+      left: -55rem;
+    }
 
-header.masthead .bg-circle-2 {
-  height: 50rem;
-  width: 50rem;
-  top: -25rem;
-  right: -25rem;
-}
+    header.masthead .bg-circle-2 {
+      height: 50rem;
+      width: 50rem;
+      top: -25rem;
+      right: -25rem;
+    }
 
-header.masthead .bg-circle-3 {
-  height: 20rem;
-  width: 20rem;
-  bottom: -10rem;
-  right: 5%;
-}
+    header.masthead .bg-circle-3 {
+      height: 20rem;
+      width: 20rem;
+      bottom: -10rem;
+      right: 5%;
+    }
 
-header.masthead .bg-circle-4 {
-  height: 30rem;
-  width: 30rem;
-  top: -5rem;
-  right: 35%;
+    header.masthead .bg-circle-4 {
+      height: 30rem;
+      width: 30rem;
+      top: -5rem;
+      right: 35%;
+    }
 }
 
 @media (min-width: 992px) {
