added project types section to homepage

--- a/code/css/team.css
+++ b/code/css/team.css
@@ -56,6 +56,12 @@
   text-align: center;
 }
 
+.services {
+    padding: 10%;
+}
+
+.service-icon{background-color:#fff;color:#1d809f;height:7rem;width:7rem;display:block;line-height:7.5rem;font-size:2.25rem;box-shadow:0 3px 3px 0 rgba(0,0,0,.1)}
+
 
 @media (min-width: 1200px) {
     .main-body {
