--- a/code/css/team.css
+++ b/code/css/team.css
@@ -1,3 +1,4 @@
+
 .column {
     float: left;
     width: 33.3%;
@@ -74,6 +75,11 @@
     p.home {
         font-size: 1.4rem !important;
     }
+    
+    p.description {
+        font-size: 210%; 
+        padding-top: 10%;
+    }
 }
 
 @media (max-width: 1199px) {
@@ -87,6 +93,11 @@
     p.home {
         font-size: 1.4rem !important;
     }
+    
+    p.description {
+        font-size: 200%; 
+        padding-top: 10%;
+    }
 }
 
 @media (max-width: 700px) {
@@ -99,6 +110,11 @@
     
     p.home {
         font-size: 1.2rem !important;
+    }
+    
+    p.description {
+        font-size: 150%; 
+        padding-top: 20%;
     }
 }
 
@@ -121,6 +137,13 @@
     
     .p-5 {
         padding: 1rem !important;
+    }
+    
+     
+        
+    p.description {
+        font-size: 150%; 
+        margin-top: 15%;
     }
 }
 
