--- a/code/css/one-page-wonder.css
+++ b/code/css/one-page-wonder.css
@@ -73,7 +73,7 @@ header.masthead .masthead-content .masthead-subheading {
   font-size: 2rem;
 }
 
-@media (min-width: 1100px ) {
+@media screen and (min-width: 0px ) {
     header.masthead .bg-circle {
       z-index: 0;
       position: absolute;
@@ -82,30 +82,30 @@ header.masthead .masthead-content .masthead-subheading {
     }
 
     header.masthead .bg-circle-1 {
-      height: 90rem;
-      width: 90rem;
-      bottom: -55rem;
-      left: -55rem;
+      height: 90vw;
+      width: 90vw;
+      bottom: -55vw;
+      left: -55vw;
     }
 
     header.masthead .bg-circle-2 {
-      height: 50rem;
-      width: 50rem;
-      top: -25rem;
-      right: -25rem;
+      height: 50vw;
+      width: 50vw;
+      top: -25vw;
+      right: -25vw;
     }
 
     header.masthead .bg-circle-3 {
-      height: 20rem;
-      width: 20rem;
-      bottom: -10rem;
+      height: 20vw;
+      width: 20vw;
+      bottom: -10vw;
       right: 5%;
     }
 
     header.masthead .bg-circle-4 {
-      height: 30rem;
-      width: 30rem;
-      top: -5rem;
+      height: 30vw;
+      width: 30vw;
+      top: -5vw;
       right: 35%;
     }
 }
